Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
CMake
CMake
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 3,237
    • Issues 3,237
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 14
    • Merge Requests 14
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • External Wiki
    • External Wiki
  • Members
    • Members
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • CMake
  • CMakeCMake
  • Issues
  • #19967

Closed
Open
Opened Nov 12, 2019 by Roman Mikhailov@romanmikhailov

Xcode: There is no option to specify working directory for xcode scheme generator

I trying to migrate our MacOS desktop xcodeproj to cmake. As a first step I try to reproduce exact xcode project with -GXcode generator and failed we have scheme with custom working directory.

set(CMAKE_XCODE_GENERATE_SCHEME true)

Is enabled to generate custom runnable with special settings. One of the settings is custom working directory.

I noticed that scheme generator always generate useCustomWorkingDirectory with "NO" value and there is no setting to alert this behavior.

It will be nice to have this option in scheme generator per target.

For example target property XCODE_SCHEME_CUSTOM_WORKING_DIRECTORY with will set "useCustomWorkingDirectory" to "YES" and customWorkingDirectory to passed value both for launch action and profiling or something special to specify it independently.

As a workaround I specify this working directory after each regeneration but it looks a bit strange.

Screen_Shot_2019-11-12_at_8.28.15_PM

Edited Nov 12, 2019 by Brad King
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
3.17.0
Milestone
3.17.0 (Past due)
Assign milestone
Time tracking
None
Due date
None
Reference: cmake/cmake#19967