Xcode: Add custom working directory property

Closes: #19967